--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       </div>
       <div class="box">
         <h3>More</h3>
-        <p>We are also skilled with TV Mounting, Ceiling Fans, Vent Insytallation, and much more! Call us at
+        <p>We are also skilled with TV Mounting, Ceiling Fans, Vent Installation, and much more! Call us at
           <strong>(551) 247-4083</strong> to find out more!
         </p>
       </div>
