--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         <i class="fas fa-tools fa-3x"></i>
 
         <h3>Reliable</h3>
-        <p>We are a reliable a reliable service that delivers prompt, efficient work with excellent
+        <p>We are a reliable service that delivers prompt, efficient work with excellent
           craftsmanship, trusted
           by homeowners for all repair needs.</p>
       </div>
